--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "colorthief": "^2.6.0",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.545.0",
+    "posthog-js": "^1.276.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
